Updated projects that are displayed, added HTML5 video players on loop for most projects.

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "public/themes/dimension/layouts",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*"
